--- a/src/css/details.css
+++ b/src/css/details.css
@@ -19,6 +19,7 @@
 .crumb-name {
     font-size:12px;
     color:#333;
+    text-decoration: none;
 }
 /* 下一目录图标 */
 .next {
@@ -58,12 +59,44 @@
     border: 1px solid #e8e8e8;
     margin-right: 16px;
     float:left;
-
+    
 }
 /* 待放大的主图 */
 .smallpic {
-    width:428px;
-    height:428px;
+    width:100%;
+    height:100%;
+    position: relative;
+}
+/* 放大的图片 */
+.BigPic {
+	width: 428px;
+	height: 428px;
+    border: 1px solid #e8e8e8;
+	overflow: hidden;
+	position: absolute;
+	left: 580px;
+	visibility: hidden;
+    z-index: 100;
+    background-color: #f4f4f4;
+}
+#big {
+    position: absolute;
+	left: 0px;
+	top: 0px;
+	width:800px;
+	height:800px;
+}
+/* 小放大镜 */
+.picswrap .smallpic #small {
+    width:30px;
+    height:30px;
+	background: url(https://yanxuan.nosdn.127.net/4352be529e9c06cb6767e1acd966f681.png);
+	
+	position: absolute;
+	left: 0px;
+	top: 0px;
+    visibility: hidden;
+    z-index:99;
 }
 .thumbImg {
     display: block;
